--- a/ref.bib
+++ b/ref.bib
@@ -165,7 +165,7 @@
 	Volume                   = {34}
 }
 
-@Artcle{sodickson_1997_smash,
+@Article{sodickson_1997_smash,
 	Title                    = {{Simultaneous acquisition of spatial harmonics (SMASH): Fast imaging with radiofrequency coil arrays}},
 	Author                   = {Sodickson, Daniel K and Manning, Warren J},
 	Journal                  = {Magn. Reson. Med.},
