add physics dl paper

--- a/ref.bib
+++ b/ref.bib
@@ -1,5 +1,8 @@
 % This file was created with JabRef 2.11.
 % Encoding: Cp1252
+%
+% People who put this together:
+%   Zhengguo Tan <zhengguo.tan@gmail.com>
 
 @Article{hestenes_1952_cg,
 	Title                    = {{Methods of conjugate gradients for solving linear systems}},
@@ -1675,4 +1678,14 @@
 	Pages                    = {396-410},
 	Volume                   = {89},
 	doi                      = {10.1002/mrm.29398}
+}
+
+@ARTICLE{hammernik_2023_physdl,
+	Title                    = {{Physics-driven deep learning for computational magnetic resonance imaging: Combining physics and machine learning for improved medical imaging}},
+	Author                   = {Hammernik, Kerstin and Küstner, Thomas and Yaman, Burhaneddin and Huang, Zhengnan and Rueckert, Daniel and \textbf{Knoll}, \textbf{Florian} and Ak\c{c}akaya, Mehmet},
+	Journal                  = {IEEE Signal Processing Magazine},
+	Year                     = {2023},
+	Volume                   = {40},
+	Pages                    = {98-114},
+	doi                      = {10.1109/MSP.2022.3215288}
 }
