--- a/ref.bib
+++ b/ref.bib
@@ -1682,7 +1682,7 @@
 
 @ARTICLE{hammernik_2023_physdl,
 	Title                    = {{Physics-driven deep learning for computational magnetic resonance imaging: Combining physics and machine learning for improved medical imaging}},
-	Author                   = {Hammernik, Kerstin and Küstner, Thomas and Yaman, Burhaneddin and Huang, Zhengnan and Rueckert, Daniel and \textbf{Knoll}, \textbf{Florian} and Ak\c{c}akaya, Mehmet},
+	Author                   = {Hammernik, Kerstin and K\"stner, Thomas and Yaman, Burhaneddin and Huang, Zhengnan and Rueckert, Daniel and Knoll, Florian and Ak\c{c}akaya, Mehmet},
 	Journal                  = {IEEE Signal Processing Magazine},
 	Year                     = {2023},
 	Volume                   = {40},
