moco ms dti from Shanghai

--- a/ref.bib
+++ b/ref.bib
@@ -1689,3 +1689,13 @@
 	Pages                    = {98-114},
 	doi                      = {10.1109/MSP.2022.3215288}
 }
+
+@Article{chen_2023_pmcmsdti,
+	Title                    = {{High-resolution multi-shot diffusion-weighted MRI combining markerless prospective motion correction and locally low-rank constrained reconstruction}},
+	Author                   = {Chen, Hao and Dai, Ke and Zhong, Sijie and Zheng, Jiaxu and Zhang, Xinyue and Yang, Shasha and Cao, Tuoyu and Wang, Chaohong and Karasan, Ekin and Frydman, Lucio and Zhang, Zhiyong},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2023},
+	Pages                    = {605-619},
+	Volume                   = {89},
+	doi                      = {10.1002/mrm.29468}
+}
