--- a/ref.bib
+++ b/ref.bib
@@ -436,6 +436,14 @@
 	doi                      = {10.1002/mrm.20401}
 }
 
+@InProceedings{graff_2006_mobat2,
+	Title                    = {{Iterative $T_2$ estimation from highly undersampled radial fast spin-echo data}},
+	Author                   = {Graff, C and Li, Z and Bilgin, A and Altbach, M and Gmitro, A F and Clarkson, E W},
+	Booktitle                = {Proceedings of the 14th Annual Meeting of ISMRM, Seattle, USA},
+	Year                     = {2006},
+	Pages                    = {925}
+}
+
 @Article{hofer_2006_dticc,
 	Title                    = {{Topography of the human corpus callosum revisited -- Comprehensive fiber tractography using diffusion tensor magnetic resonance imaging}},
 	Author                   = {Hofer, Sabine and Frahm, Jens},
@@ -829,7 +837,7 @@
 	Year                     = {2012},
 	Pages                    = {441-448},
 	Volume                   = {51},
-		doi                      = {10.3414/ME11-02-0031}
+	doi                      = {10.3414/ME11-02-0031}
 }
 
 @Article{kern_2012_phantom,
@@ -967,7 +975,8 @@
 	Journal                  = {Magn. Reson. Med.},
 	Year                     = {2014},
 	Pages                    = {707-717},
-	Volume                   = {72}
+	Volume                   = {72},
+	doi                      = {10.1002/mrm.24980}
 }
 
 @Article{garyfallidis_2014_dipy,
@@ -1349,6 +1358,16 @@
 	Volume                   = {106}
 }
 
+@Article{setsompop_2018_gslider,
+	Title                    = {{High-resolution in vivo diffusion imaging of the human brain with generalized slice dithered enhanced resolution: Simultaneous multislice (gSlider-SMS)}},
+	Author                   = {Setsompop, Kawin and Fan, Qiuyun and Stockmann, Jason and Bilgic, Berkin and Huang, Susie and Cauley, Stephen F and Nummenmaa, Aapo and Wang, Fuyixue and Rathi, Yogesh and Witzel, Thomas and Wald, Lawrence L},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2018},
+	Pages                    = {141-151},
+	Volume                   = {79},
+	doi                      = {10.1002/mrm.26653}
+}
+
 @Article{wang_2018_mobat1,
 	Title                    = {{Model-based $T_1$ mapping with sparsity constraints using single-shot inversion-recovery radial FLASH}},
 	Author                   = {Wang, Xiaoqing and Roeloffs, Volkert and Klosowski, Jakob and Tan, Zhengguo and Voit, Dirk and Uecker, Martin and Frahm, Jens},
@@ -1463,7 +1482,8 @@
 	Journal                  = {Magn. Reson. Med.},
 	Year                     = {2019},
 	Pages                    = {3599-3615},
-	Volume                   = {81}
+	Volume                   = {81},
+	doi                      = {10.1002/mrm.27673}
 }
 
 @Article{wang_2019_myt1,
@@ -1509,7 +1529,8 @@
 	Journal                  = {Magn. Reson. Med.},
 	Year                     = {2020},
 	Pages                    = {94-108},
-	Volume                   = {83}
+	Volume                   = {83},
+	doi                      = {10.1002/mrm.27903}
 }
 
 @Article{hu_2020_spa_llr,
@@ -1640,6 +1661,16 @@
 	Volume                   = {21}
 }
 
+@Article{dong_2022_ace-epti,
+	Title                    = {{SNR-efficient distortion-free diffusion relaxometry imaging using accelerated echo-train shifted echo-planar time-resolving imaging (ACE-EPTI)}},
+	Author                   = {Dong, Zijing and Wang, Fuyixue and Wald, Lawrence and Setsompop, Kawin},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2022},
+	Pages                    = {164-179},
+	Volume                   = {88},
+	doi                      = {10.1002/mrm.29198}
+}
+
 @Article{starekova_2022_fb-fat,
 	Title                    = {{Improved free-breathing liver fat and iron quantification using a 2D chemical shift-encoded MRI with flip angle modulation and motion-corrected averaging}},
 	Author                   = {Starekova, Jitka and Zhao, Ruiyang and Colgan, Timothy J and Johnson, Kevin M and Rehm, Jennifer L and Wells, Shane A and Reeder, Scott B and Hernando, Diego},
@@ -1680,9 +1711,17 @@
 	doi                      = {10.1002/mrm.29398}
 }
 
+@ARTICLE{tan_2022_meco,
+	Title                    = {{Free-breathing liver fat, $R_2^*$ and $B_0$ field mapping using multi-echo radial FLASH and regularized model-based reconstruction}},
+	Author                   = {\authoremph{Tan}, \authoremph{Zhengguo} and Unterberg-Buchwald, Christina and Blumenthal, Moritz and Scholand, Nick and Schaten, Philip and Holme, Christian and Wang, Xiaoqing and Raddatz, Dirk and Uecker, Martin},
+	Journal                  = {IEEE Transactions on Medical Imaging},
+	Year                     = {2022},
+	doi                      = {10.1109/TMI.2022.3228075}
+}
+
 @ARTICLE{hammernik_2023_physdl,
 	Title                    = {{Physics-driven deep learning for computational magnetic resonance imaging: Combining physics and machine learning for improved medical imaging}},
-	Author                   = {Hammernik, Kerstin and K\"stner, Thomas and Yaman, Burhaneddin and Huang, Zhengnan and Rueckert, Daniel and Knoll, Florian and Ak\c{c}akaya, Mehmet},
+	Author                   = {Hammernik, Kerstin and K\"ustner, Thomas and Yaman, Burhaneddin and Huang, Zhengnan and Rueckert, Daniel and Knoll, Florian and Ak\c{c}akaya, Mehmet},
 	Journal                  = {IEEE Signal Processing Magazine},
 	Year                     = {2023},
 	Volume                   = {40},
