--- a/ref.bib
+++ b/ref.bib
@@ -591,7 +591,7 @@
 	Year                     = {2009},
 	Volume                   = {1},
 	Pages                    = {1398-1401},
-		doi                      = {10.1109/ISBI.2009.5193327}
+	doi                      = {10.1109/ISBI.2009.5193327}
 }
 
 @Article{block_2009_mobat2,
@@ -1412,6 +1412,16 @@
 	Pages                    = {1343-1358},
 	Volume                   = {82},
 	doi                      = {10.1002/mrm.27813}
+}
+
+@Article{cordero_2019_cplxdwi,
+	Title                    = {{Complex diffusion-weighted image estimation via matrix recovery under general noise models}},
+	Author                   = {Cordero-Grande, Lucilio and Christiaens, Daan and Hutter, Jana and Price, Anthony N and Hajnal, Jo V},
+	Journal                  = {NeuroImage},
+	Year                     = {2019},
+	Pages                    = {391-404},
+	Volume                   = {200},
+	doi                      = {10.1016/j.neuroimage.2019.06.039}
 }
 
 @Article{dong_2019_tilted_capi,
