--- a/ref.bib
+++ b/ref.bib
@@ -482,6 +482,25 @@
 	doi                      = {10.1002/mrm.21236}
 }
 
+@Article{buehrer_2007_scc,
+	Title                    = {{Array compression for MRI with large coil arrays}},
+	Author                   = {Buehrer, Martin and Pruessmann, Klaas P and Boesiger, Peter and Kozerke, Sebastian},
+	Journal                  = {Magn. Reson. Med},
+	Year                     = {2007},
+	Pages                    = {1131-1139},
+	Volume                   = {57},
+    doi                      = {10.1002/mrm.21237}
+}
+
+@InProceedings{liang_2007_psf,
+	Title                    = {Spatiotemporal imaging with partially separable functions},
+	Author                   = {Liang, Zhi-Pei},
+	Booktitle                = {2007 4th IEEE International Symposium on Biomedical Imaging: From Nano to Macro},
+	Pages                    = {988-991},
+	Year                     = {2007},
+	doi                      = {10.1109/ISBI.2007.357020}
+}
+
 @Article{liu_2007_ff,
 	Title                    = {{Fat quantification with IDEAL gradient echo imaging: Correction of bias from T1 and noise}},
 	Author                   = {Liu, Chia-Ying and McKenzie, Charles A and Yu, Huanzhou and Brittain, Jean H and Reeder, Scott B},
@@ -713,6 +732,16 @@
 	Year                     = {2010},
 	Volume                   = {27},
 	Pages                    = {81-89}
+}
+
+@Article{grissom_2010_ptx,
+	Title                    = {{Improving high-field MRI using parallel excitation}},
+	Author                   = {Grissom, William A and Sacolick, Laura and Vogel, Mika W},
+	Journal                  = {Imaging Med.},
+	Year                     = {2010},
+	Pages                    = {675-693},
+	Volume                   = {2},
+	doi                      = {10.2217/IIM.10.62}
 }
 
 @Article{heidemann_2010_resolve7t,
@@ -958,6 +987,16 @@
 	Year                     = {2013},
 	Pages                    = {1267-1275},
 	Volume                   = {38}
+}
+
+@Article{ugurbil_2013_hcp,
+	Title                    = {{Pushing spatial and temporal resolution for functional and diffusion MRI in the Human Connectome Project}},
+	Author                   = {U\u{g}urbil, Kamil and Xu, Junqian and Auerbach, Edward J and Moeller, Steen and Vu, An T and Duarte-Carvajalino, Julio M and Lenglet, Christophe and Wu, Xiaoping and Schmitter, Sebastian and {Van de Moortele}, Pierre Francois and Strupp, John and Sapiro, Guillermo and {De Martino}, Federico and Wang, Dingxin and Harel, Noam and Garwood, Michael and Chen, Liyong and Feinberg, David A and Smith, Stephen M and Miller, Karla L and Sotiropoulos, Stamatios N and Jbabdi, Saad and Andersson, Jesper L R and Behrens, Timothy E J and Glasser, Matthew F and {Van Essen}, David C and Yacoub, Essa},
+	Journal                  = {NeuroImage},
+	Volume                   = {80},
+	Pages                    = {80-104},
+	Year                     = {2013},
+	doi                      = {10.1016/j.neuroimage.2013.05.012}
 }
 
 @Article{block_2014_rad,
@@ -1211,6 +1250,16 @@
 	Volume                   = {78}
 }
 
+@Article{dai_2017_navi,
+	Title                    = {{Simultaneous multislice accelerated interleaved EPI DWI using generalized blipped-CAIPI acquisition and 3D K-space reconstruction}},
+	Author                   = {Dai, Erpeng and Ma, Xiaodong and Zhang, Zhe and Yuan, Chun and Guo, Hua},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2017},
+	Pages                    = {1593-1605},
+	Volume                   = {77},
+	doi                      = {10.1002/mrm.26249}
+}
+
 @Article{feng_2017_csbody,
 	Title                    = {{Compressed sensing for body MRI}},
 	Author                   = {Feng, Li and Benkert, Thomas and Block, Kai Tobias and Sodickson, Daniel K and Otazo, Ricardo and Chandarana, Hersh},
@@ -1248,6 +1297,16 @@
 	doi                      = {10.1002/mrm.26382}
 }
 
+@Article{saucedo_2017_randomshift,
+	Title                    = {{Improved computational efficiency of locally low rank MRI reconstruction using iterative random patch adjustments}},
+	Author                   = {Saucedo, Andres and Lefkimmiatis, Stamatios and Rangwala, Novena and Sung, Kyunghyun},
+	Journal                  = {IEEE Trans. Med. Imaging},
+	Year                     = {2017},
+	Pages                    = {1209-1220},
+	Volume                   = {36},
+    doi                      = {10.1109/TMI.2017.2659742}
+}
+
 @Article{tan_2017_mobaflow,
 	Title                    = {{Model-based reconstruction for real-time phase-contrast flow MRI: Improved spatiotemporal accuracy}},
 	Author                   = {Tan, Zhengguo and Roeloffs, Volkert and Voit, Dirk and Joseph, Arun A and Untenberger, Markus and Merboldt, Klaus-Dietmar and Frahm, Jens},
@@ -1273,6 +1332,16 @@
 	Year                     = {2017},
 	Pages                    = {180-195},
 	Volume                   = {77}
+}
+
+@Article{wu_2017_diff,
+	Title                    = {{Image formation in diffusion MRI: A review of recent technical developments}},
+	Author                   = {Wu, Wenchuan and Miller, Karla L},
+	Journal                  = {J. Magn. Reson. Imaging},
+	Year                     = {2017},
+	Pages                    = {646-662},
+	Volume                   = {46},
+	doi                      = {10.1002/jmri.25664}
 }
 
 @Article{armstrong_2018_fat,
@@ -1318,6 +1387,16 @@
 	Year                     = {2018},
 	Pages                    = {215-226},
 	Volume                   = {2}
+}
+
+@Article{dai_2018_navi,
+	Title                    = {{The effects of navigator distortion and noise level on interleaved EPI DWI reconstruction: a comparison between image- and $k$-space method}},
+	Author                   = {Dai, Erpeng and Zhang, Zhe and Ma, Xiaodong and Dong, Zijing and Li, Xuesong and Xiong, Yuhui and Yuan, Chun and Guo, Hua},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2018},
+	Pages                    = {2024-2032},
+	Volume                   = {80},
+	doi                      = {10.1002/mrm.27190}
 }
 
 @Article{dong_2018_mobadiff,
@@ -1375,6 +1454,16 @@
 	Year                     = {2018},
 	Pages                    = {730-740},
 	Volume                   = {79}
+}
+
+@Article{wang_2018_epi,
+	Title                    = {{A comparison of readout segmented EPI and interleaved EPI in high-resolution diffusion weighted imaging}},
+	Author                   = {Wang, Yishi and Ma, Xiaodong and Zhang, Zhe and Dai, Erpeng and Jeong, Ha-Kyu and Yuan, Chun and Guo, Hua},
+	Journal                  = {Magn. Reson. Imaging},
+	Year                     = {2018},
+	Pages                    = {39-47},
+	Volume                   = {47},
+	doi                      = {10.1016/j.mri.2017.11.011}
 }
 
 @Article{zimmermann_2018_mobamgre,
@@ -1484,6 +1573,16 @@
 	Year                     = {2019},
 	Pages                    = {1000-1011},
 	Volume                   = {82}
+}
+
+@Article{Tournier_2019_mrtrix,
+	Title                    = {{MRtrix3: A fast, flexible and open software framework for medical image processing and visualisation}},
+	Author                   = {Tournier, J-Donald and Smith, Robert and Raffelt, David and Tabbara, Rami and Dhollander, Thijs and Pietsch, Maximilian and Christiaens, Daan and Jeurissen, Ben and Yeh, Chun-Hung and Connelly, Alan},
+	Journal                  = {NeuroImage},
+	Volume                   = {202},
+	Pages                    = {116137},
+	Year                     = {2019},
+	doi = {https://doi.org/10.1016/j.neuroimage.2019.116137}
 }
 
 @Article{wang_2019_epti,
@@ -1679,6 +1778,16 @@
 	Pages                    = {164-179},
 	Volume                   = {88},
 	doi                      = {10.1002/mrm.29198}
+}
+
+@Article{polak_2022_samer,
+	Title                    = {{Scout accelerated motion estimation and reduction (SAMER)}},
+	Author                   = {Polak, Daniel and Splitthoff, Daniel Nicolas and Clifford, Bryan and Lo, Wei-Ching and Huang, Susie Y and Conklin, John and Wald, Lawrence L and Setsompop, Kawin and Cauley, Stephen},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2022},
+	Pages                    = {163-178},
+	Volume                   = {87},
+	doi                      = {10.1002/mrm.28971}
 }
 
 @Article{starekova_2022_fb-fat,
