--- a/ref.bib
+++ b/ref.bib
@@ -319,6 +319,16 @@
 	Volume                   = {51}
 }
 
+@Article{katscher_2003_ptx,
+	Title                    = {{Transmit SENSE}},
+	Author                   = {Katscher, Ulrich and B\"ornert, Peter and Leussler, Christoph and van den Brink, Johan S},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2003},
+	Pages                    = {144-150},
+	Volume                   = {49},
+    doi                      = {10.1002/mrm.10353}
+}
+
 @Article{twieg_2003_parse,
 	Title                    = {{Parsing local signal evolution directly from a single-shot MRI signal: A new approach for fMRI}},
 	Author                   = {Twieg, Donald},
@@ -573,7 +583,8 @@
 	Journal                  = {Magn. Reson. Imaging},
 	Year                     = {2008},
 	Pages                    = {133-141},
-	Volume                   = {26}
+	Volume                   = {26},
+	doi                      = {10.1016/j.mri.2007.04.010}
 }
 
 @Article{olafsson_2008_joint,
@@ -768,7 +779,8 @@
 	Author                   = {Jones, Derek K},
 	Publisher                = {Oxford University Press},
 	Year                     = {2010},
-	ISBN                     = {9780195369779}
+	ISBN                     = {9780195369779},
+	doi                      = {10.1093/med/9780195369779.001.0001}
 }
 
 @Article{lee_2010_repi,
@@ -889,7 +901,7 @@
 
 @Article{setsompop_2012_blipped,
 	Title                    = {{Blipped-controlled aliasing in parallel imaging for simultaneous multislice echo planar imaging with reduced $g$-factor penalty}},
-	Author                   = {Setsompop, Kawin and Gagoski, Borjan A and Polimeni, Jonathan R and Witzel, Thomas and Wedeen, Van J and Wald, Lawrence L and Adalsteinsson, Elfar},
+	Author                   = {Setsompop, Kawin and Gagoski, Borjan A and Polimeni, Jonathan R and Witzel, Thomas and Wedeen, Van J and Wald, Lawrence L},
 	Journal                  = {Magn. Reson. Med.},
 	Year                     = {2012},
 	Pages                    = {1210-1224},
@@ -959,6 +971,16 @@
 	Year                     = {2013},
 	Pages                    = {1319-1331},
 	Volume                   = {70}
+}
+
+@Article{jeong_2013_navims,
+	Title                    = {{High-resolution human diffusion tensor imaging using 2-D navigated multishot SENSE EPI at 7 T}},
+	Author                   = {Jeong, Ha-Kyu and Gore, John C and Anderson, Adam W},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2013},
+	Pages                    = {793-802},
+	Volume                   = {69},
+	Doi                      = {10.1002/mrm.24320}
 }
 
 @Article{ma_2013_mrf,
@@ -1114,7 +1136,8 @@
 	Journal                  = {NMR Biomed},
 	Year                     = {2015},
 	Pages                    = {353-366},
-	Volume                   = {28}
+	Volume                   = {28},
+	doi                      = {10.1002/nbm.3258}
 }
 
 @Article{mani_2015_spiral_diff,
@@ -1531,6 +1554,16 @@
 	Volume                   = {32}
 }
 
+@Article{lam_2019_mrsi,
+	title                    = {{Constrained magnetic resonance spectroscopic imaging by learning nonlinear low-dimensional models}},
+	Author                   = {Lam, Fan and Li, Yahang and Peng, Xi},
+	Journal                  = {IEEE Trans. Med. Imaging},
+	Year                     = {2019},
+	Pages                    = {545-555},
+	Volume                   = {39},
+    doi                      = {10.1109/TMI.2019.2930586}
+}
+
 @Article{merrem_2019_nl_steam,
 	Title                    = {{Diffusion-weighted MRI of the prostate without susceptibility artifacts: Undersampled multi-shot turbo-STEAM with rotated radial trajectories}},
 	Author                   = {Merrem, Andreas and Hofer, Sabine and Hosseini, Ali Seif Amir and Voit, Dirk and Merboldt, Klaus-Dietmar and Tan, Zhengguo and Frahm, Jens},
@@ -1545,7 +1578,8 @@
 	Author                   = {Ong, Frank and Lustig, Michael},
 	Booktitle                = {Proceedings of the 27th Annual Meeting of ISMRM, Montr\'eal, CAN},
 	Year                     = {2019},
-	Pages                    = {4819}
+	Pages                    = {4819},
+	doi                      = {10.5281/zenodo.5893788}
 }
 
 @Article{rosenzweig_2019_ring,
@@ -1722,7 +1756,18 @@
 	Journal                  = {Magn. Reson. Med.},
 	Year                     = {2021},
 	Pages                    = {835-851},
-	Volume                   = {86}
+	Volume                   = {86},
+	doi                      = {10.1002/mrm.28756}
+}
+
+@Article{moeller_2021_nordic,
+	Title                    = {{NOise reduction with DIstribution Corrected (NORDIC) PCA in dMRI with complex-valued parameter-free locally low-rank processing}},
+	Author                   = {Moeller, Steen and Pisharady, Pramod Kumar and Ramanna, Sudhir and Lenglet, Christophe and Wu, Xiaoping and Dowdle, Logan and Yacoub, Essa and Uğurbil, Kamil and Akçakaya, Mehmet},
+	Journal                  = {NeuroImage},
+	Year                     = {2021},
+	Volume                   = {226},
+	Pages                    = {117539},
+	doi                      = {10.1016/j.neuroimage.2020.117539}
 }
 
 @Article{rettenmeier_2021_repi,
