--- a/ref.bib
+++ b/ref.bib
@@ -35,6 +35,16 @@
 	doi                      = {10.1016/0022-2364(80)90207-3}
 }
 
+@Article{brown_1982_mrsi,
+	Title                    = {{NMR chemical shift imaging in three dimensions}},
+	Author                   = {Brown, T. R. and Kincaid, B. M. and Ugurbil, K.},
+	Journal                  = {Proc. Natl. Acad. Sci. USA},
+	Year                     = {1982},
+	Pages                    = {3532-3526},
+	Volume                   = {79},
+	doi                      = {10.1073/pnas.79.11.3523}
+}
+
 @Article{dixon_1984_wf,
 	Title                    = {{Simple proton spectroscopic imaging}},
 	Author                   = {Dixon, W Thomas},
@@ -437,7 +447,7 @@
 }
 
 @Article{breuer_2005_caipi,
-	Title                    = {{Controlled Aliasing in Parallel Imaging Results in Higher Acceleration (CAIPIRINHA) for Multi-Slice Imaging}},
+	Title                    = {{Controlled aliasing in parallel imaging results in higher acceleration (CAIPIRINHA) for multi-slice imaging}},
 	Author                   = {Breuer, Felix A and Blaimer, Martin and Heidemann, Robin M and Mueller, Matthias F and Griswold, Mark A and Jakob, Peter M},
 	Journal                  = {Magn. Reson. Med.},
 	Year                     = {2005},
@@ -466,11 +476,21 @@
 
 @Article{chung_2006_dti,
 	Title                    = {Comparison of bootstrap approaches for estimation of uncertainties of DTI parameters},
-	Author                   = {SungWon Chung and Ying Lu and Roland G. Henry},
+	Author                   = {Chung, SungWon and Lu, Ying and Henry, Roland G.},
 	Journal                  = {NeuroImage},
 	Year                     = {2006},
 	Pages                    = {531-541},
 	Volume                   = {33}
+}
+
+@Article{hinton_2006_ae,
+	Title                    = {Reducing the dimensionality of data with neural networks},
+	Author                   = {Hinton, G. E. and Salakhutdinov, R. R.},
+	Journal                  = {Science},
+	Year                     = {2006},
+	Pages                    = {504-507},
+	Volume                   = {313},
+	doi                      = {10.1126/science.1127647}
 }
 
 @Article{bauer_2007_nlinv,
@@ -1067,9 +1087,27 @@
 	Pages                    = {4077}
 }
 
+@article{lam_2014_spice,
+	Title                    = {{A subspace approach to high-resolution spectroscopic imaging}},
+	Author                   = {Lam, Fan and Liang, Zhi-Pei},
+	Journal                  = {Magn. Reson. Med.},
+	Volume                   = {71},
+	Pages                    = {1349-1357},
+	Year                     = {2014},
+	doi                      = {10.1002/mrm.25168}
+}
+
+@InProceedings{kingma_2014_vae,
+	Title                    = {{Auto-encoding variational bayes}},
+	Author                   = {Kingma, Diederik P and Welling, Max},
+	Journal                  = {International Conference on Learning Representations},
+	Year                     = {2014},
+	doi                      = {10.48550/arXiv.1312.6114}
+}
+
 @article{madore_2014_acce_ms_dti,
+	Title                    = {{Accelerated multi-shot diffusion imaging}},
 	Author                   = {Madore, Bruno and Chiou, Jr-yuan George and Chu, Renxin and Chao, Tzu-Cheng and Maier, Stephan E.},
-	Title                    = {Accelerated multi-shot diffusion imaging},
 	Journal                  = {Magn. Reson. Med.},
 	Volume                   = {72},
 	Pages                    = {324-336},
@@ -1377,7 +1415,7 @@
 }
 
 @Article{asslaender_2018_mrf,
-	Title                    = {{Low Rank Alternating Direction Method of MultipliersReconstruction for MR Fingerprinting}},
+	Title                    = {{Low rank alternating direction method of multipliers reconstruction for MR Fingerprinting}},
 	Author                   = {Assl\"ander, Jakob and Cloos, Martijn A and Knoll, Florian and Sodickson, Daniel K and Hennig, J\"urgen and Lattanzi, Riccardo},
 	Journal                  = {Magn. Reson. Med.},
 	Year                     = {2018},
@@ -1901,4 +1939,14 @@
 	Pages                    = {605-619},
 	Volume                   = {89},
 	doi                      = {10.1002/mrm.29468}
+}
+
+@Article{arefeen_2023_latent,
+	Title                    = {{Latent signal models: Learning compact representations of signal evolution for improved time-resolved, multi-contrast MRI}},
+	Author                   = {Arefeen, Yamin and Xu, Junshen and Zhang, Molin and Dong, Zijing and Wang, Fuyixue and White, Jacob and Bilgic, Berkin and Adalsteinsson, Elfar},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2023},
+	Pages                    = {483-501},
+	Volume                   = {90},
+	doi                      = {10.1002/mrm.29657}
 }
