--- a/ref.bib
+++ b/ref.bib
@@ -1414,6 +1414,16 @@
 	Volume                   = {79}
 }
 
+@Article{aggarwal_2018_modl,
+	Title                    = {{MoDL: Model-based deep learning architecture for inverse problems}},
+	Author                   = {Aggarwal, Hemant K and Mani, Merry P and Jacob, Mathews},
+	Journal                  = {IEEE Trans. Med. Imaging},
+	Year                     = {2018},
+	Pages                    = {394-405},
+	Volume                   = {38},
+	doi                      = {10.1109/TMI.2018.2865356}
+}
+
 @Article{asslaender_2018_mrf,
 	Title                    = {{Low rank alternating direction method of multipliers reconstruction for MR Fingerprinting}},
 	Author                   = {Assl\"ander, Jakob and Cloos, Martijn A and Knoll, Florian and Sodickson, Daniel K and Hennig, J\"urgen and Lattanzi, Riccardo},
@@ -1762,12 +1772,22 @@
 }
 
 @Article{wang_2020_smst1,
-	title                    = {{Model‐based reconstruction for simultaneous multi‐slice $T_1$ mapping using single‐shot inversion‐recovery radial FLASH}},
+	title                    = {{Model-based reconstruction for simultaneous multi-slice $T_1$ mapping using single-shot inversion-recovery radial FLASH}},
 	Author                   = {Wang, Xiaoqing and Rosenzweig, Sebastian and Scholand, Nick and Holme, H Christian M and Uecker, Martin},
 	Journal                  = {Magn. Reson. Med.},
 	Year                     = {2020},
 	Pages                    = {1258-1271},
 	Volume                   = {85}
+}
+
+@Article{yaman_2020_ssdu,
+	Title                    = {{Self-supervised learning of physics-guided reconstruction neural networks without fully sampled reference data}},
+	Author                   = {Yaman, Burhaneddin and Hosseini, Seyed Amir Hossein and Moeller, Steen and Ellermann, Jutta and Uğurbil, Kâmil and Akçakaya, Mehmet},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2020},
+	Volume                   = {84},
+	Pages                    = {3172-3191},
+	doi                      = {10.1002/mrm.28378}
 }
 
 @Article{zhong_2020_resr2s,
