add maple early-view

--- a/ref.bib
+++ b/ref.bib
@@ -1970,3 +1970,13 @@
 	Volume                   = {90},
 	doi                      = {10.1002/mrm.29657}
 }
+
+@Article{heydari_2024_jmaple,
+	Title                    = {{Joint MAPLE: Accelerated joint $T_1$ and $T_2^*$ mapping with scan-specific self-supervised networks}},
+	Author                   = {Heydari, Amir and Ahmadi, Abbas and Kim, Tae Hyung and Bilgic, Berkin},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2024},
+	Pages                    = {},
+	Volume                   = {},
+	doi                      = {10.1002/mrm.29989}
+}
