update conference styles

--- a/ref.bib
+++ b/ref.bib
@@ -336,7 +336,7 @@
 	Year                     = {2003},
 	Pages                    = {144-150},
 	Volume                   = {49},
-    doi                      = {10.1002/mrm.10353}
+	doi                      = {10.1002/mrm.10353}
 }
 
 @Article{twieg_2003_parse,
@@ -519,13 +519,13 @@
 	Year                     = {2007},
 	Pages                    = {1131-1139},
 	Volume                   = {57},
-    doi                      = {10.1002/mrm.21237}
+	doi                      = {10.1002/mrm.21237}
 }
 
 @InProceedings{liang_2007_psf,
 	Title                    = {Spatiotemporal imaging with partially separable functions},
 	Author                   = {Liang, Zhi-Pei},
-	Booktitle                = {2007 4th IEEE International Symposium on Biomedical Imaging: From Nano to Macro},
+	Booktitle                = {4th IEEE International Symposium on Biomedical Imaging: From Nano to Macro (ISBI'4)},
 	Pages                    = {988-991},
 	Year                     = {2007},
 	doi                      = {10.1109/ISBI.2007.357020}
@@ -851,7 +851,7 @@
 @InProceedings{vasanawala_2011_jspar,
 	Title                    = {{Practical parallel imaging compressed sensing MRI: Summary of two years of experience in accelerating body MRI of pediatric patients}},
 	Author                   = {Vasanawala, SS and Murphy, MJ and Lai, P and Keutzer, K and Pauly, JM and Lustig, M},
-	Booktitle                = {IEEE Intl Symp Biomed Imaging},
+	Booktitle                = {8th IEEE International Symposium on Biomedical Imaging: From Nano to Macro (ISBI'11)},
 	Year                     = {2011},
 	Pages                    = {1039-1043}
 }
@@ -1082,7 +1082,7 @@
 @InProceedings{hilbert_2014_grappatini,
 	Title                    = {{MARTINI and GRAPPA -- When speed is taste}},
 	Author                   = {Hilbert, Tom and Kober, Tobias and Sumpf, Tilman J and Tan, Zhengguo and Frahm, Jens and Falkovskiy, Pavel and Meyer, Heiko and Bendl, Rolf and Thiran, Jean-Philippe and Meuli, Reto and Krueger, Gunnar},
-	Journal                  = {Proceedings of the 23th Annual Meeting of ISMRM, Milan, ITA},
+	Booktitle                = {Proceedings of the 23th Annual Meeting of ISMRM, Milan, ITA},
 	Year                     = {2014},
 	Pages                    = {4077}
 }
@@ -1100,7 +1100,7 @@
 @InProceedings{kingma_2014_vae,
 	Title                    = {{Auto-encoding variational bayes}},
 	Author                   = {Kingma, Diederik P and Welling, Max},
-	Journal                  = {International Conference on Learning Representations},
+	Booktitle                = {2nd International Conference on Learning Representations (ICLR'2)},
 	Year                     = {2014},
 	doi                      = {10.48550/arXiv.1312.6114}
 }
@@ -1270,7 +1270,7 @@
 @InProceedings{wang_2016_dl,
 	Title                    = {{Accelerating magnetic resonance imaging via deep learning}},
 	Author                   = {Wang, Shanshan and Su, Zhenghang and Ying, Leslie and Peng, Xi and Zhu, Shun and Liang, Feng and Feng, Dagan and Liang, Dong},
-	Booktitle                = {IEEE Intl Symp Biomed Imaging},
+	Booktitle                = {13th IEEE International Symposium on Biomedical Imaging (ISBI'13)},
 	Year                     = {2016},
 	Pages                    = {514-517}
 }
@@ -1365,7 +1365,7 @@
 	Year                     = {2017},
 	Pages                    = {1209-1220},
 	Volume                   = {36},
-    doi                      = {10.1109/TMI.2017.2659742}
+	doi                      = {10.1109/TMI.2017.2659742}
 }
 
 @Article{tan_2017_mobaflow,
@@ -1609,7 +1609,7 @@
 	Year                     = {2019},
 	Pages                    = {545-555},
 	Volume                   = {39},
-    doi                      = {10.1109/TMI.2019.2930586}
+	doi                      = {10.1109/TMI.2019.2930586}
 }
 
 @Article{merrem_2019_nl_steam,
@@ -1911,6 +1911,14 @@
 	Pages                    = {120-137},
 	Volume                   = {87},
 	doi                      = {10.1002/mrm.28970}
+}
+
+@InProceedings{yaman_2022_zs,
+	Title                    = {{Zero-shot self-supervised learning for MRI reconstruction}},
+	Author                   = {Yaman, Burhaneddin and Hosseini, Seyed Amir Hossein and Akçakaya, Mehmet},
+	Booktitle                = {10th International Conference on Learning Representations (ICLR'10)},
+	Year                     = {2022},
+	doi                      = {10.48550/arXiv.2102.07737}
 }
 
 @Article{dai_2023_julep,
