--- a/ref.bib
+++ b/ref.bib
@@ -139,6 +139,16 @@
 	Volume                   = {28}
 }
 
+@Article{rudin_1992_tv,
+	Title                    = {{Nonlinear total variation based noise removal algorithms}},
+	Author                   = {Rudin, Leonid I and Osher, Stanley and Fatemi, Emad},
+	Journal                  = {Phys. D: Nonlinear Phenom.},
+	Year                     = {1992},
+	Pages                    = {259-268},
+	Volume                   = {60},
+	doi                      = {10.1016/0167-2789(92)90242-F}
+}
+
 @Article{ra_1993_sense,
 	Title                    = {{Fast imaging using subencoding data sets from multiple detectors}},
 	Author                   = {Ra, J. B. and Rim, C. Y.},
@@ -318,6 +328,16 @@
 	Pages                    = {870-888},
 	Volume                   = {20},
 	doi                      = {10.1016/S1053-8119(03)00336-7}
+}
+
+@Article{behrens_2003_ballstick,
+	Title                    = {{Characterization and propagation of uncertainty in diffusion-weighted MR imaging}},
+	Author                   = {Behrens, T. E. J. and Woolrich, M. W. and Jenkinson, M. and Johansen-Berg, H. and Nunes, R. G. and Clare, S. and Matthews, P. M. and Brady, J. M. and Smith, S. M.},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2003},
+	Pages                    = {1077-1088},
+	Volume                   = {50},
+	doi                      = {10.1002/mrm.10609}
 }
 
 @Article{fessler_2003_nufft,
@@ -1112,6 +1132,16 @@
 	Volume                   = {72},
 	Pages                    = {324-336},
 	Year                     = {2014}
+}
+
+@Article{mcgivney_2014_svdmrf,
+	Title                    = {{SVD compression for magnetic resonance fingerprinting in the time domain}},
+	Author                   = {McGivney, Debra F and Pierre, Eric and Ma, Dan and Jiang, Yun and Saybasili, Haris and Gulani, Vikas and Griswold, Mark A},
+	Journal                  = {IEEE Trans. Med. Imaging},
+	Year                     = {2014},
+	Pages                    = {2311-2322},
+	Volume                   = {33},
+	doi                      = {10.1109/TMI.2014.2337321}
 }
 
 @Book{mori_2014_DTI,
