use at for emails

--- a/ref.bib
+++ b/ref.bib
@@ -2,7 +2,7 @@
 % Encoding: Cp1252
 %
 % People who put this together:
-%   Zhengguo Tan <zhengguo.tan@gmail.com>
+%   Zhengguo Tan <zhengguo.tan at gmail.com>
 
 @Article{hestenes_1952_cg,
 	Title                    = {{Methods of conjugate gradients for solving linear systems}},
