add naviepi ref

--- a/ref.bib
+++ b/ref.bib
@@ -2018,3 +2018,13 @@
 	Volume                   = {},
 	doi                      = {10.1002/mrm.29989}
 }
+
+@Article{tan_2024_naviepi,
+	Title                    = {{Accelerated diffusion-weighted magnetic resonance imaging at 7 T: Joint reconstruction for shift-encoded navigator-based interleaved echo planar imaging (JETS-NAViEPI)}},
+	Author                   = {Tan, Zhengguo and Liebig, Patrick Alexander and Heidemann, Robin Martin and Laun, Frederik Bernd and Knoll, Florian},
+	Journal                  = {Imaging Neuroscience},
+	Year                     = {2024},
+	Pages                    = {1-15},
+	Volume                   = {2},
+	doi                      = {10.1162/imag_a_00085}
+}
